--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
     "# We call the pandas.read_excel method and pass through the string './cities.xlsx' as the file is called cities.xlsx.  By saying './' we are saying \n",
     "# go to the current folder, lists-lab, and find the 'cities.xlsx' file there\n",
-    "cities = travel_df.to_dict('records')"
+    "cities = travel_df.to_dic"
    ]
   },
   {
