--- a/index.ipynb
+++ b/index.ipynb
@@ -150,142 +150,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Area</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Solta</td>\n",
-       "      <td>Croatia</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Greenville</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>84554</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Buenos Aires</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>13591863</td>\n",
-       "      <td>4758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Los Cabos</td>\n",
-       "      <td>Mexico</td>\n",
-       "      <td>287651</td>\n",
-       "      <td>3750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Walla Walla Valley</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>32237</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Marakesh</td>\n",
-       "      <td>Morocco</td>\n",
-       "      <td>928850</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Albuquerque</td>\n",
-       "      <td>New Mexico</td>\n",
-       "      <td>559277</td>\n",
-       "      <td>491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Archipelago Sea</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>60000</td>\n",
-       "      <td>8300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Iguazu Falls</td>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>0</td>\n",
-       "      <td>672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Salina Island</td>\n",
-       "      <td>Italy</td>\n",
-       "      <td>4000</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Toronto</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>630</td>\n",
-       "      <td>2731571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Pyeongchang</td>\n",
-       "      <td>South Korea</td>\n",
-       "      <td>2581000</td>\n",
-       "      <td>3194</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  City      Country  Population     Area\n",
-       "0                Solta      Croatia        1700       59\n",
-       "1           Greenville          USA       84554       68\n",
-       "2         Buenos Aires    Argentina    13591863     4758\n",
-       "3            Los Cabos       Mexico      287651     3750\n",
-       "4   Walla Walla Valley          USA       32237       33\n",
-       "5             Marakesh      Morocco      928850      200\n",
-       "6          Albuquerque   New Mexico      559277      491\n",
-       "7      Archipelago Sea      Finland       60000     8300\n",
-       "8         Iguazu Falls    Argentina           0      672\n",
-       "9        Salina Island        Italy        4000       27\n",
-       "10             Toronto       Canada         630  2731571\n",
-       "11         Pyeongchang  South Korea     2581000     3194"
+       "[{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
+       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
+       " {'City': 'Buenos Aires',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 13591863,\n",
+       "  'Area': 4758},\n",
+       " {'City': 'Los Cabos',\n",
+       "  'Country': 'Mexico',\n",
+       "  'Population': 287651,\n",
+       "  'Area': 3750},\n",
+       " {'City': 'Walla Walla Valley',\n",
+       "  'Country': 'USA',\n",
+       "  'Population': 32237,\n",
+       "  'Area': 33},\n",
+       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
+       " {'City': 'Albuquerque',\n",
+       "  'Country': 'New Mexico',\n",
+       "  'Population': 559277,\n",
+       "  'Area': 491},\n",
+       " {'City': 'Archipelago Sea',\n",
+       "  'Country': 'Finland',\n",
+       "  'Population': 60000,\n",
+       "  'Area': 8300},\n",
+       " {'City': 'Iguazu Falls',\n",
+       "  'Country': 'Argentina',\n",
+       "  'Population': 0,\n",
+       "  'Area': 672},\n",
+       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
+       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571},\n",
+       " {'City': 'Pyeongchang',\n",
+       "  'Country': 'South Korea',\n",
+       "  'Population': 2581000,\n",
+       "  'Area': 3194}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +203,8 @@
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
     "# We call the pandas.read_excel method and pass through the string './cities.xlsx' as the file is called cities.xlsx.  By saying './' we are saying \n",
     "# go to the current folder, lists-lab, and find the 'cities.xlsx' file there\n",
-    "a= travel_df.to_dict('records')"
+    "a = travel_df.to_dict('records')\n",
+    "a"
    ]
   },
   {
