Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,22 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
+       "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[0]."
+    "cities[0].items()"
    ]
   },
   {
