Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,22 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['City', 'Country', 'Population', 'Area'])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cities[0]"
+    "group1 = cities[0]\n"
    ]
   },
   {
