Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,11 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "group1 = cities[0]\n"
+    "cities[0]"
    ]
   },
   {
