--- a/index.ipynb
+++ b/index.ipynb
@@ -359,22 +359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-21-84a4129c3663>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-84a4129c3663>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(cities[0]['City']\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
-    "cities[0]"
+    "print(cities[0]['City']"
    ]
   },
   {
