Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,20 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-21-84a4129c3663>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-84a4129c3663>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(cities[0]['City']\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\n"
      ]
     }
    ],
    "source": [
-    "print(cities[0]['City']"
+    "print(cities[0])"
    ]
   },
   {
