Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,19 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Solta'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(cities[0].)"
+    "cities[0]['City']"
    ]
   },
   {
