Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,11 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['City', 'Country', 'Population', 'Area'])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "keys = cities[0].keys()"
+    "list1 = \n",
+    "keys = cities[0].keys()\n",
+    "for i in keys"
    ]
   },
   {
