Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -374,8 +374,8 @@
     }
    ],
    "source": [
-    "list1 = \n",
-    "keys = cities[0].keys()\n",
+    "dict1 = cities[0]\n",
+    "keys = dict1.keys()\n",
     "for i in keys"
    ]
   },
