Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "source": [
     "citiesGroup1 = cities[0]\n",
     "keys = citiesGroup1.keys()\n",
-    "for i in keys"
+    "'for i in keys"
    ]
   },
   {
