Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,8 @@
    "source": [
     "citiesGroup1 = cities[0]\n",
     "keys = citiesGroup1.keys()\n",
-    "'for i in keys"
+    "for i in keys:\n",
+    "    "
    ]
   },
   {
