Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,25 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['City', 'Country', 'Population', 'Area'])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "citiesGroup1 = cities[0]\n",
     "keys = citiesGroup1.keys()\n",
     "for i in keys:\n",
-    "    "
+    "    citiesGroup1[i]"
    ]
   },
   {
