Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,14 +359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solta\n",
+      "Croatia\n",
+      "1700\n",
+      "59\n"
+     ]
+    }
+   ],
    "source": [
     "citiesGroup1 = cities[0]\n",
     "keys = citiesGroup1.keys()\n",
     "for i in keys:\n",
-    "    citiesGroup1[i]"
+    "    print(citiesGroup1[i])"
    ]
   },
   {
