Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -425,12 +425,14 @@
        "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(cities[0])"
+   ]
   },
   {
    "cell_type": "markdown",
