Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -425,13 +425,13 @@
        "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(cities[0])"
+    "list(cities[0].keys())"
    ]
   },
   {
