Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,22 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "dict_items([('City', 'Solta'), ('Country', 'Croatia'), ('Population', 1700), ('Area', 59)])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(cities[0].keys())"
+    "cities[0].items()"
    ]
   },
   {
