Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,22 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_items([('City', 'Solta'), ('Country', 'Croatia'), ('Population', 1700), ('Area', 59)])"
+       "[('City', 'Solta'), ('Country', 'Croatia'), ('Population', 1700), ('Area', 59)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[0].items()"
+    "list(cities[0].items())"
    ]
   },
   {
