Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -416,22 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "dict_keys(['City', 'Country', 'Population', 'Area'])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(cities[0].keys())"
+    "cities[0].keys()"
    ]
   },
   {
