Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "w### Creating Dictionaries"
+    "### Creating Dictionaries"
    ]
   },
   {
