Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,23 +527,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'city': 'Pittsburgh'}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pittsburgh = dict(city='Pittsburgh')\n",
-    "pittsburgh"
+    "tumkur = dict()\n",
+    "tukut"
    ]
   },
   {
