Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,12 +527,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'city': 'Tumkur'}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tumkur = dict()\n",
-    "tukut"
+    "tumkur = dict(city='Tumkur')\n",
+    "tumkur"
    ]
   },
   {
