Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,18 +527,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'city': 'Tumkur'}"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-56-00124ca9bdbe>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-00124ca9bdbe>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    tumkur = dict('city'='Tumkur')\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
     }
    ],
    "source": [
