Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -572,7 +572,7 @@
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")"
+    "dict(city='Bentonville', state='A')"
    ]
   },
   {
