Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,22 +557,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'city': 'Las Vegas', 'state': 'Nevada'}"
+       "{'city': 'Bentonville', 'state': 'Arkansas'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(city='Bentonville', state='A')"
+    "dict(city='Bentonville', state='Arkansas')"
    ]
   },
   {
